--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                     <img src ="отзыв4.jpg" alt="">
                 </div>
             </div>
-            <button class="slider-next">next</button>
+            <button class="slider-prev">Назад</button>
+            <button class="slider-next">Далее</button>
         </div>
         </div>
      <div id="contact" class="end">
